Fix version downgrade on removed storage

BUG: 443074